// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemsModel filters by content channel id 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28ContentChannelId%20eq%201%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel filters by content channel id 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel getPersonaFeed doesn't fetch if there aren't any persona ids 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed doesn't fetch if there aren't any persona ids 2`] = `Array []`;

exports[`ContentItemsModel getPersonaFeed fetches items from the Apollos plugin 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the Apollos plugin 2`] = `
Array [
  Array [
    "Apollos/ContentChannelItemsByDataViewGuids?guids=%2C&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20&%24orderby=StartDateTime%20desc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the custom rock endpoint 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the custom rock endpoint 2`] = `
Array [
  Array [
    "ContentChannelItems/GetFromPersonDataView?guids=%2C&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20&%24orderby=StartDateTime%20desc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 1`] = `
Array [
  Array [
    "TEST_ID",
  ],
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 2`] = `Promise {}`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent when using Apollos Plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=101%2C201&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent when using Apollos Plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child using the apollos plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=101%2C201&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child using the apollos plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20101%29%29",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item when using apollos plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20101%29%29",
    Object {},
    Object {},
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=1%2C2&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20&%24orderby=Order%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item when using apollos plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets by id 1`] = `
Array [
  Array [
    "ContentChannelItems/1?loadAttributes=expanded",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by id 2`] = `
Object {
  "id": 1,
}
`;

exports[`ContentItemsModel gets by ids 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by ids 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets by ids using Apollos Plugin 1`] = `
Array [
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=1%2C2&loadAttributes=expanded&%24filter=%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%20",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by ids using Apollos Plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is innactive 1`] = `Array []`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is not the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel isContentActiveLiveStream returns true if the livestream is the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 2`] = `
Array [
  Array [
    Object {
      "id": 123,
      "text": "something",
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no child content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no features 1`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no features 2`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no parent content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no sibling content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 1`] = `
Array [
  Object {
    "id": "ScriptureFeature:123",
    "reference": "john 3",
  },
  Object {
    "body": "text feature",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 2`] = `
Array [
  Array [
    Object {
      "id": "123-1",
      "text": "text feature",
    },
  ],
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 3`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "reference": "john 3",
    },
  ],
]
`;

exports[`ContentItemsModel returns scripture features when a contentItem has a ScriptureFeatures field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
]
`;

exports[`ContentItemsModel returns scripture features when a contentItem has a ScriptureFeatures field 2`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "reference": "John 3:16",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "reference": "Mark 1:1",
    },
  ],
]
`;

exports[`ContentItemsModel returns text features and when a contentItem has a TextFeatures and a TextFeature field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns text features and when a contentItem has a TextFeatures and a TextFeature field 2`] = `
Array [
  Array [
    Object {
      "id": 456,
      "text": "wow this is neat!",
    },
  ],
  Array [
    Object {
      "id": "123-0",
      "text": "something else",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "text": "that thing is cool",
    },
  ],
]
`;

exports[`ContentItemsModel returns text features when a contentItem has a TextFeatures field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns text features when a contentItem has a TextFeatures field 2`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "text": "something else",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "text": "that thing is cool",
    },
  ],
]
`;
